--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,6 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Feb 09 19:43:06 CET 2016
-systemProp.http.proxyHost=proxy.ig2i.fr
+#Tue Feb 09 20:05:35 CET 2016
+systemProp.http.proxyPassword=bourdieu
+systemProp.http.proxyHost=
+systemProp.http.proxyUser=mdaudruy
 systemProp.http.proxyPort=3128
