--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,6 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Mar 02 20:43:56 CET 2016
-systemProp.http.proxyHost=
+#Mon Mar 07 08:02:11 CET 2016
+systemProp.http.proxyHost=proxy.ig2i.fr
 systemProp.http.proxyPort=3128
