Test signature API

--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,6 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Mar 07 08:02:11 CET 2016
+#Tue Mar 08 13:50:06 CET 2016
+systemProp.http.proxyPassword=bourdieu
 systemProp.http.proxyHost=proxy.ig2i.fr
+systemProp.http.proxyUser=mdaudruy
 systemProp.http.proxyPort=3128
