Signature Music Story

--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,6 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Mar 08 17:20:08 CET 2016
+#Mon Mar 28 14:41:48 CEST 2016
+systemProp.http.proxyPassword=bourdieu
 systemProp.http.proxyHost=proxy.ig2i.fr
+systemProp.http.proxyUser=mdaudruy
 systemProp.http.proxyPort=3128
