--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,8 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Mon Mar 28 14:41:48 CEST 2016
-systemProp.http.proxyPassword=bourdieu
-systemProp.http.proxyHost=proxy.ig2i.fr
-systemProp.http.proxyUser=mdaudruy
+#Mon Mar 28 16:19:22 CEST 2016
+systemProp.http.proxyHost=
 systemProp.http.proxyPort=3128
