services generation question random

--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,6 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu May 05 14:58:05 CEST 2016
-systemProp.http.proxyHost=
+#Tue May 10 08:43:29 CEST 2016
+systemProp.http.proxyHost=proxy.ig2i.fr
 systemProp.http.proxyPort=3128
