--- a/MMSongQuizz/app/src/main/AndroidManifest.xml
+++ b/MMSongQuizz/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         </activity>
         <activity android:name=".activities.NetworkErrorActivity" />
         <activity android:name=".activities.QuestionActivity"></activity>
+        <!-- Needed for LoginActivity to work -->
+        <activity
+            android:name="com.spotify.sdk.android.authentication.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
     </application>
 
 </manifest>
