types de questions boutons pour le player

--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,6 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue May 10 08:43:29 CEST 2016
+#Wed May 18 14:46:33 CEST 2016
+systemProp.https.proxyPort=3128
 systemProp.http.proxyHost=proxy.ig2i.fr
+systemProp.https.proxyHost=proxy.ig2i.fr
 systemProp.http.proxyPort=3128
