--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,8 +12,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed May 18 14:46:33 CEST 2016
-systemProp.https.proxyPort=3128
+#Wed May 18 14:58:27 CEST 2016
+systemProp.http.proxyPassword=bourdieu
 systemProp.http.proxyHost=proxy.ig2i.fr
+systemProp.https.proxyPort=3128
 systemProp.https.proxyHost=proxy.ig2i.fr
+systemProp.http.proxyUser=mdaudruy
 systemProp.http.proxyPort=3128
