--- a/MMSongQuizz/app/src/main/AndroidManifest.xml
+++ b/MMSongQuizz/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".activities.MMQuizzApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/mmsongquizzlogoonly"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
