--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,5 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-
+#Wed Jun 01 08:24:13 CEST 2016
+systemProp.http.proxyHost=proxy.ig2i.fr
+systemProp.http.proxyPort=3128
+systemProp.https.proxyHost=proxy.ig2i.fr
+systemProp.https.proxyPort=3128
