--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,5 +12,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
+#Mon Jun 06 19:44:51 CEST 2016
 
