--- a/MMSongQuizz/app/src/main/AndroidManifest.xml
+++ b/MMSongQuizz/app/src/main/AndroidManifest.xml
@@ -13,12 +13,10 @@
     <application
         android:name=".activities.MMQuizzApplication"
         android:allowBackup="true"
-
         android:icon="@mipmap/mmsongquizzlogoonly"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,10 +30,10 @@
         <activity
             android:name="com.spotify.sdk.android.authentication.LoginActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
         <activity android:name=".activities.GenreActivity" />
-        <activity android:name=".activities.MainActivity"></activity>
-        <activity android:name=".activities.EndSessionActivity"></activity>
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.EndSessionActivity" />
+        <activity android:name=".activities.CreateUserActivity"></activity>
     </application>
 
 </manifest>
