--- a/MMSongQuizz/app/src/main/AndroidManifest.xml
+++ b/MMSongQuizz/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.EndSessionActivity" />
         <activity android:name=".activities.CreateUserActivity" />
-        <activity android:name=".activities.LeaderboardActivity"></activity>
+        <activity android:name=".activities.LeaderboardActivity" />
+        <activity android:name=".activities.ApplicationSettingsActivity"></activity>
     </application>
 
 </manifest>
