--- a/MMSongQuizz/gradle.properties
+++ b/MMSongQuizz/gradle.properties
@@ -12,5 +12,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Jun 07 16:01:46 CEST 2016
-
+#Wed Jun 15 18:52:36 CEST 2016
+systemProp.http.proxyHost=
+systemProp.http.proxyPort=3128
